# pass50

./: .gitignore  README.md  main.py  pass50.py  pyproject.toml  update.sh
src/pass50/: __init__.py  args.py  cmd50.py  color.py  pass50.py  runner50.py
