[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pass50"
version = "0.0.3"
authors = [{ name = "zivmax", email = "zivmax@foxmail.com" }]
maintainers = [{ name = "zivmax", email = "zivmax@foxmail.com" }]
description = "A convinent tool to check and submit your codes to \"CS50\"."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
  "cowsay",
  "colorama",
]

[project.scripts]
pass50 = "pass50:main"
pass50-cli = "pass50:main"

[project.urls]
Repository = "https://github.com/zivmax/pass50"
Issues = "https://github.com/zivmax/pass50/issues"
